tests/e2e/nested_service_block3.story
http server
    when tweet stream tweet
        break
